Ajustements des polices, paddings, marges, pour respecter les différences entre la version desktop et mobile. Style de la version tablette ajouté dans les media queries. Ajustements des hauteurs des images. Effet "hover" ajouté aux cartes. ID #activities-section remplacé avec une classe .activities-section.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="TAYLOR_Heather_2_css_042022/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;625;650;675;700;725;750;775;800&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/64ceb060e1.js" crossorigin="anonymous"></script>
     </head>
 <!--utiliser les balises sémantiques, i.e. main, header, nav, etc. -->
@@ -213,7 +213,7 @@
                             </div>
                         </div>
                         <div class="show-more">
-                                <a>Afficher plus</a>
+                                <a href="#">Afficher plus</a>
                         </div>
                 </section>
                 <section class="popular-section"> <!-- Section: Les plus populaires -->
@@ -303,7 +303,7 @@
 
             <!--Activities section-->
 
-            <section id="activities-section">
+            <section class="activities-section">
                 <div class="activities-heading">
                     <h2>Activités à Marseille</h2>
                 </div>
