Mise à jour des commentaires. Bordure de base ajouté pour le menu. Mise à jour des ancres.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;625;650;675;700;725;750;775;800&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/64ceb060e1.js" crossorigin="anonymous"></script>
     </head>
-<!--utiliser les balises sémantiques, i.e. main, header, nav, etc. -->
     <body>
-        <!-- Header -->
+<!---Header--->
         <header>
             <nav>
                 <div class="logo-container"><img class="logo" src="./TAYLOR_Heather_3_images_042022/logo/Booki.png" alt="Booki Logo" width="191" height="90"></div>
@@ -29,9 +28,10 @@
                 </ul>
             </nav>
         </header>
-        <!-- Main -->
+<!---Main--->
         <main>
-            <section class="search-section"> <!-- Section: Trouvez votre hébergement pour des vacances de rêve -->
+<!---Search Section: Page Heading, Form, Filters--->            
+            <section class="search-section">
                 <div>
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre ville ou en pleine nature</p>
@@ -67,8 +67,10 @@
                     <div class="results-message"><p>Plus de 500 logements sont disponsibles dans cette ville</p></div>
                 </div>
             </section>
-            <div class="housing-and-popular-section"> <!-- Section: Hébergements à Marseille et Les plus populaires -->
-                <section class="housing-section"> <!-- Section: Hébergements à Marseille -->
+<!---Housing and Popular Section - Container--->
+            <div class="housing-and-popular-section">
+<!---Housing Section--->
+                <section id="housing-section" class="housing-section">
                         <h2 class="housing-heading">Hébergements à Marseille</h2>
                         <div class="housing-cards-container">
                             <div class="housing-cards">            
@@ -192,7 +194,8 @@
                         </div>
                         <a href="#" class="show-more">Afficher plus</a>
                 </section>
-                <section class="popular-section"> <!-- Section: Les plus populaires -->
+<!---Popular Section--->
+                <section class="popular-section">
                     <div class="popular-heading">
                         <h2>Les plus populaires</h2>
                         <i class="fa fa-solid fa-star"></i>
@@ -258,9 +261,8 @@
                     </div>
                 </section>  
             </div>
-
-            <!--Activities section-->
-            <section class="activities-section">
+<!---Activities section--->
+            <section id="activities-section">
                 <h2 class="activities-heading">Activités à Marseille</h2>
                 <div class="activities">
                     <div class="activities-column">
@@ -322,7 +324,7 @@
                 </div>
             </section> 
         </main>
-        <!-- Footer -->
+<!---Footer--->
         <footer>
             <div>
                 <h5 class="footer-heading">A propos</h5>
