--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Booki</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta name="description" content="Trouvez votre hébergement pour des vacances de rêve. En plein centre ville ou en pleine nature.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
         <link rel="stylesheet" href="TAYLOR_Heather_2_css_042022/normalize.css">
         <link rel="stylesheet" href="TAYLOR_Heather_2_css_042022/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
