--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="https://kit.fontawesome.com/64ceb060e1.js" crossorigin="anonymous"></script>
     </head>
     <body>
-<!---Header--->
+<!--Header-->
         <header>
             <nav>
                 <div class="logo-container"><img class="logo" src="./TAYLOR_Heather_3_images_042022/logo/Booki.png" alt="Booki Logo" width="191" height="90"></div>
@@ -28,9 +28,9 @@
                 </ul>
             </nav>
         </header>
-<!---Main--->
+<!--Main-->
         <main>
-<!---Search Section: Page Heading, Form, Filters--->            
+<!--Search Section: Page Heading, Form, Filters-->            
             <section class="search-section">
                 <div>
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
@@ -67,9 +67,9 @@
                     <div class="results-message"><p>Plus de 500 logements sont disponsibles dans cette ville</p></div>
                 </div>
             </section>
-<!---Housing and Popular Section - Container--->
+<!--Housing and Popular Section - Container-->
             <div class="housing-and-popular-section">
-<!---Housing Section--->
+<!--Housing Section-->
                 <section id="housing-section" class="housing-section">
                         <h2 class="housing-heading">Hébergements à Marseille</h2>
                         <div class="housing-cards-container">
@@ -194,7 +194,7 @@
                         </div>
                         <a href="#" class="show-more">Afficher plus</a>
                 </section>
-<!---Popular Section--->
+<!--Popular Section-->
                 <section class="popular-section">
                     <div class="popular-heading">
                         <h2>Les plus populaires</h2>
@@ -261,7 +261,7 @@
                     </div>
                 </section>  
             </div>
-<!---Activities section--->
+<!--Activities section-->
             <section id="activities-section">
                 <h2 class="activities-heading">Activités à Marseille</h2>
                 <div class="activities">
@@ -324,7 +324,7 @@
                 </div>
             </section> 
         </main>
-<!---Footer--->
+<!--Footer-->
         <footer>
             <div>
                 <h5 class="footer-heading">A propos</h5>
